name:                tetris-cube
version:             0.1.0.0
synopsis:            Find a solution to the “Tetris Cube” puzzle
description:
    Using simple backtracking, attempt to assign each cubie in the
    cube to a tee in one of its 12 possible orientations.
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          jb@yavin
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable tetris-cube
  main-is: tetris-cube.hs
  build-depends: base, containers, linear, lens
  default-language: Haskell2010
  ghc-options: -rtsopts -Wall -Wno-x-partial -Wno-incomplete-uni-patterns
